--- a/activity.html
+++ b/activity.html
@@ -34,15 +34,16 @@
         </svg>
         <ul style="padding-top: 15px">
             <li>
-                <a href="index.html">Acceuil</a>
+                <a href="index.html">Acceuil</strong></a>
             </li>
             <li>
-                <a href="activity.html">Activités</a>
+                <a href="activity.html"><strong>Activités</strong></a>
             </li>
             <li>
                 <a href="languages.html">Langues</a>
             </li>
-            <li><a href="devis.html"><strong>Devis</strong></a>
+            <li>
+                <a href="devis.html">Devis</a>
             </li>
         </ul>
     </nav>
@@ -50,8 +51,8 @@
 
 <div class="main">
     <div style="background-color: blue; height: 100%">
-        <div id="acceuil"></div>
-            acceuil
+        <div id="activité"></div>
+            activité
     </div>
 </div>
 
