--- a/devis.html
+++ b/devis.html
@@ -50,8 +50,8 @@
 
 <div class="main">
     <div style="background-color: blue; height: 100%">
-        <div id="acceuil"></div>
-            acceuil
+        <div id="devis"></div>
+            devis
     </div>
 </div>
 
