--- a/languages.html
+++ b/languages.html
@@ -40,18 +40,75 @@
                 <a href="activity.html">Activités</a>
             </li>
             <li>
-                <a href="languages.html">Langues</a>
+                <a href="languages.html"><strong>Langues</strong></a>
             </li>
-            <li><a href="devis.html"><strong>Devis</strong></a>
+            <li>
+                <a href="devis.html">Devis</a>
             </li>
         </ul>
     </nav>
 </div>
 
 <div class="main">
-    <div style="background-color: blue; height: 100%">
-        <div id="acceuil"></div>
-            acceuil
+    <div class="row" style="display: flex; align-items: safe center; justify-content: safe center">
+        <div id="languages"></div>
+        <div style="text-align: center">
+            <h4><strong>Trouvez votre langue !</strong></h4>
+            <h5>Esther Traduction vous propose des traductions en plus de 8 langues différentes</h5>
+        </div>
+        <div class="col-xs-2" style="max-width: 13rem;">
+            <div class="card">
+                <img src="./assets/cn.svg" alt="">
+            </div>
+        </div>
+        <div class="col-xs-2" style="max-width: 13rem;">
+            <div class="card">
+                <img src="./assets/de.svg" alt="">
+            </div>
+        </div>
+        <div class="col-xs-2" style="max-width: 13rem;">
+            <div class="card">
+                <img src="./assets/es.svg" alt="">
+            </div>
+        </div>
+        <div class="col-xs-2" style="max-width: 13rem;">
+            <div class="card">
+                <img src="./assets/fr.svg" alt="">
+            </div>
+        </div>
+        <div class="col-xs-2" style="max-width: 13rem;">
+            <div class="card">
+                <img src="./assets/it.svg" alt="">
+            </div>
+        </div>
+        <div class="col-xs-2" style="max-width: 13rem;">
+            <div class="card">
+                <img src="./assets/jp.svg" alt="">
+            </div>
+        </div>
+        <div class="col-xs-2" style="max-width: 13rem;">
+            <div class="card">
+                <img src="./assets/nl.svg" alt="">
+            </div>
+        </div>
+        <div class="col-xs-2" style="max-width: 13rem;">
+            <div class="card">
+                <img src="./assets/nz.svg" alt="">
+            </div>
+        </div>
+        <div class="col-xs-2" style="max-width: 13rem;">
+            <div class="card">
+                <img src="./assets/pt.svg" alt="">
+            </div>
+        </div>
+        <div class="col-xs-2" style="max-width: 13rem;">
+            <div class="card">
+                <img src="./assets/ru.svg" alt="">
+            </div>
+        </div>
+        <div style="text-align: center">
+            <h5>40 traducteurs / correcteurs</h5>
+        </div>
     </div>
 </div>
 
