--- a/activity.html
+++ b/activity.html
@@ -49,15 +49,44 @@
     </nav>
 </div>
 
-<div class="main">
-    <div style="background-color: blue; height: 100%">
-        <div id="activité"></div>
-            activité
+<div class="main container">
+        <div style="text-align: center">
+            <h4><strong>Activité de l'entreprise !</strong></h4>
+        </div>
+
+        <!--    if the size is xs show one item else show 2 items-->
+        <div class="row">
+            <div class="card col-xs-12 col-sm-6">
+                <div class="card-body" style="width: 100%">
+                    Traduction commerciale et technique,
+                </div>
+            </div>
+            <div class="card col-xs-12 col-sm-6">
+                <div class="card-body" style="width: 100%">
+                    Plaquettes d'entreprise, mode d'emploi, rapports, articles de blogs devis, courriers ect...
+                </div>
+            </div>
+            <div class="card col-xs-12 col-sm-6">
+                <div class="card-body" style="width: 100%">
+                    Double travail de traduction
+                </div>
+            </div>
+            <div class="card col-xs-12 col-sm-6">
+                <div class="card-body" style="width: 100%">
+                    Marché des PME ayant des partenaires étrangers
+                </div>
+            </div>
+            <div class="card col-xs-12 col-sm-6">
+                <div class="card-body" style="width: 100%">
+                    La première personne traduit la seconde corrige
+                </div>
+            </div>
+            <div class="card col-xs-12">
+                <img src="./assets/activity.jpg" alt="activity">
+            </div>
+        </div>
     </div>
 </div>
-
-<!--    </div>-->
-<!--</div>-->
 
 <footer class="footer mt-auto py-3 align-items-center">
     <div class="policy">
