--- a/index.html
+++ b/index.html
@@ -48,15 +48,35 @@
     </nav>
 </div>
 
-<div class="main">
-    <div style="background-color: blue; height: 100%">
-        <div id="acceuil"></div>
-            acceuil
-    </div>
-</div>
+<div class="main container" style="display: flex; align-items: safe center; justify-content: safe center">
 
-<!--    </div>-->
-<!--</div>-->
+    <div class="row">
+        <div class="card col-xs-12 col-md-4 border-0">
+            Madma Esther Sannier a
+            tonde sa societe de traduction en Z009.
+            Attentive a la demande au marche, rentreprise sest orientée sur le marché des PME avant des partenaires
+            étrangers, et s'est peu a peu specialisee dans e domaine commercial et technique :
+            plaquettes d'entreprises, modes demploi. rapport.
+            articles de blog. descriptif techniques, aevis, courriers,
+            ect...
+        </div>
+        <div class="card col-xs-12 col-md-4 border-0" style="align-items: center">
+            <img src="./assets/main.png" alt="main image" style="width: 75%">
+        </div>
+        <div class="card col-xs-12 col-md-4 border-0">
+            Soucieuse d'ottrir a ses clients
+            Benvenuti
+            un travail de gualite irreprochable elle nembauche gue des traducteurs dont la
+            lanque maternelle est celle de la lanque souhaitée : anglais,
+            E Komo espagnol, italien, portugais,
+            Mai
+            allemand néerlandais japonais, mandarin, ect..
+            Chaque travai est soumis a des traducteurs ditterents: E premier traduit. le second
+            Bienvenue exécute les corrections
+        </div>
+    </div>
+
+</div>
 
 <footer class="footer mt-auto py-3 align-items-center">
     <div class="policy">
@@ -66,7 +86,6 @@
         <p>Siège sociale: 21 rue Desnos 76600 Le Havre</p>
         <p>Effectif: 50 salariés + 35 travailleurs indépendant</p>
     </div>
-    <!--    add a button to -->
     <div class="social">
         <div class="social-text">Rejoingnez nous !</div>
         <div>
