--- a/devis.html
+++ b/devis.html
@@ -48,41 +48,48 @@
     </nav>
 </div>
 
-<div class="main container" style="display: flex; align-items: safe center; justify-content: safe center; width: 100%">
-    <form action="https://formsubmit.co/your@email.com" method="POST" class="col-12 col-lg-8" style="border: solid 1px #b076b3; padding: 15px; background-color: #e0a5d1">
-        <div class="text-center">
-            <strong>Demande de devis</strong>
-        </div>
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text-area" class="form-control" name="name" id="name" placeholder="name" required>
-        </div>
-        <div class="form-group">
-            <label for="adressepostale">Adresse postale</label>
-            <input type="text" class="form-control" name="adressepostale" id="adressepostale" placeholder="adresse postale" required>
-        </div>
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="text" class="form-control" name="email" id="email" placeholder="email" required>
-        </div>
-        <div class="form-group">
-            <label for="_subject">Subject</label>
-            <input type="text" class="form-control" name="_subject" id="_subject" placeholder="subject" required>
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-        </div>
-<!--        add a text area input with boostrap-->
-        <div class="form-group">
-            <label for="message">Message</label>
-            <textarea class="form-control" name="message" id="message" rows="5" placeholder="Votre demande" required></textarea>
-        </div>
-<!--         the white button should be at the center-->
-        <button type="submit" class="btn btn-primary" style="background-color: white; color: #b076b3; border: solid 1px #b076b3; margin: auto; display: block; margin-top: 5px" >Submit</button>
-    </form>
+<div class="main" >
+    <div class="row" style="display: flex; align-items: safe center; justify-content: safe center">
+        <form action="https://formsubmit.co/your@email.com" method="POST" class="col-12 col-lg-8"
+              style="border: solid 1px #b076b3; padding: 15px; background-color: #e0a5d1">
+            <div class="text-center">
+                <strong>Demande de devis</strong>
+            </div>
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text-area" class="form-control" name="name" id="name" placeholder="name" required>
+            </div>
+            <div class="form-group">
+                <label for="adressepostale">Adresse postale</label>
+                <input type="text" class="form-control" name="adressepostale" id="adressepostale"
+                       placeholder="adresse postale" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="text" class="form-control" name="email" id="email" placeholder="email" required>
+            </div>
+            <div class="form-group">
+                <label for="_subject">Subject</label>
+                <input type="text" class="form-control" name="_subject" id="_subject" placeholder="subject" required>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <!--        add a text area input with boostrap-->
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control" name="message" id="message" rows="5" placeholder="Votre demande"
+                          required></textarea>
+            </div>
+            <!--         the white button should be at the center-->
+            <button type="submit" class="btn btn-primary"
+                    style="background-color: white; color: #b076b3; border: solid 1px #b076b3; margin: auto; display: block; margin-top: 5px">
+                Submit
+            </button>
+        </form>
+    </div>
 </div>
-
 <footer class="footer mt-auto py-3 align-items-center">
     <div class="policy">
         <p><strong>Contact</strong></p>
@@ -91,7 +98,6 @@
         <p>Siège sociale: 21 rue Desnos 76600 Le Havre</p>
         <p>Effectif: 50 salariés + 35 travailleurs indépendant</p>
     </div>
-    <!--    add a button to -->
     <div class="social">
         <div class="social-text">Rejoingnez nous !</div>
         <div>
