--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
     </nav>
 </div>
 
-<div class="main container" style="display: flex; align-items: safe center; justify-content: safe center">
-
-    <div class="row">
+<div class="main">
+    <div class="row" style="display: flex; align-items: safe center; justify-content: safe center">
         <div class="card col-xs-12 col-md-4 border-0">
             Madma Esther Sannier a
             tonde sa societe de traduction en Z009.
@@ -61,7 +60,7 @@
             ect...
         </div>
         <div class="card col-xs-12 col-md-4 border-0" style="align-items: center">
-            <img src="./assets/main.png" alt="main image" style="width: 75%">
+            <img src="./assets/main.jpg" alt="main image" style="width: 75%">
         </div>
         <div class="card col-xs-12 col-md-4 border-0">
             Soucieuse d'ottrir a ses clients
