--- a/languages.html
+++ b/languages.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 <div class="header">
-    <nav class="navbar test">
-        <svg width="150" height="40" viewBox="0 0 320 86.16005300479908" class="css-1j8o68f">
+    <nav class="navbar">
+        <svg height="30" viewBox="0 0 320 86.16005300479908" class="css-1j8o68f">
             <defs id="SvgjsDefs6713"></defs>
             <g id="SvgjsG6714" featurekey="symbolFeature-0"
                transform="matrix(1.1735549029439152,0,0,1.1735549029439152,-8.678229756106296,-15.597718644796219)"
@@ -32,15 +32,15 @@
                 <path d="M9.4531 6.191000000000001 l0 1.748 l-3.4961 0 l0 12.061 l-1.9238 0 l0 -12.061 l-3.5059 0 l0 -1.748 l8.9258 0 z M19.531268750000002 20 l-3.5742 -6.2109 l-1.9336 0 l0 6.2109 l-1.9434 0 l0 -13.809 l4.6484 0 c2.8906 0 4.209 1.7676 4.209 3.9355 c0 1.9238 -1.1328 3.2617 -3.0273 3.584 l3.8965 6.2891 l-2.2754 0 z M14.02346875 7.871 l0 4.4336 l2.4414 0 c1.7969 0 2.6074 -0.89844 2.6074 -2.207 c0 -1.2891 -0.81055 -2.2266 -2.6074 -2.2266 l-2.4414 0 z M33.5740625 20 l-1.1523 -3.2227 l-6.1719 0 l-1.1523 3.2227 l-2.0215 0 l5.0879 -13.809 l2.3438 0 l5.0879 13.809 l-2.0215 0 z M26.8554625 15.0781 l4.9609 0 l-2.4805 -6.9629 z M38.2324125 20 l0 -13.809 l4.5508 0 c4.248 0 6.4063 2.8516 6.4063 6.8945 c0 4.0723 -2.1582 6.9141 -6.4063 6.9141 l-4.5508 0 z M40.1758125 18.2422 l2.5293 0 c3.0176 0 4.4531 -2.002 4.4531 -5.1563 c0 -3.1348 -1.4355 -5.1465 -4.4531 -5.1465 l-2.5293 0 l0 10.303 z M57.275359375 20.18555 c-2.8613 0 -5.0781 -1.6895 -5.0781 -4.8047 l0 -9.1895 l1.9434 0 l0 8.916 c0 2.2754 1.3672 3.3203 3.1348 3.3203 s3.1641 -1.0547 3.1641 -3.3203 l0 -8.916 l1.9434 0 l0 9.1895 c0 3.1152 -2.2266 4.8047 -5.1074 4.8047 z M72.24611875 20.18555 c-3.916 0 -6.9043 -2.6855 -6.9043 -7.0996 c0 -4.3945 2.9883 -7.0801 6.9043 -7.0801 c2.793 0 5.1074 1.3867 6.1719 3.7598 l-1.7969 0.71289 c-0.80078 -1.6895 -2.4316 -2.6367 -4.375 -2.6367 c-2.7734 0 -4.9707 1.9141 -4.9707 5.2441 c0 3.3496 2.1973 5.2637 4.9707 5.2637 c1.9434 0 3.5742 -0.94727 4.375 -2.6367 l1.7969 0.72266 c-1.0645 2.3633 -3.3789 3.75 -6.1719 3.75 z M88.67185 6.191000000000001 l0 1.748 l-3.4961 0 l0 12.061 l-1.9238 0 l0 -12.061 l-3.5059 0 l0 -1.748 l8.9258 0 z M91.29881875 20 l0 -13.809 l1.9434 0 l0 13.809 l-1.9434 0 z M103.3984625 20.18555 c-3.916 0 -6.9043 -2.6953 -6.9043 -7.0996 c0 -4.3945 2.9883 -7.0801 6.9043 -7.0801 c3.8965 0 6.8945 2.6855 6.8945 7.0801 c0 4.4043 -2.998 7.0996 -6.8945 7.0996 z M103.3984625 18.3594 c2.7637 0 4.9512 -1.9141 4.9512 -5.2734 c0 -3.3301 -2.1875 -5.2441 -4.9512 -5.2441 c-2.7734 0 -4.9707 1.9141 -4.9707 5.2441 c0 3.3594 2.1973 5.2734 4.9707 5.2734 z M122.841546875 6.191000000000001 l1.9336 0 l0 13.809 l-2.0996 0 l-7.2168 -10.957 l0 10.957 l-1.9238 0 l0 -13.809 l2.0801 0 l7.2266 10.908 l0 -10.908 z"></path>
             </g>
         </svg>
-        <ul style="padding-top: 15px">
+        <ul style="padding: 15px 0 0 0">
             <li>
-                <a href="index.html">Acceuil</a>
+                <a href="index.html">Acceuil</strong></a>
             </li>
             <li>
-                <a href="activity.html">Activités</a>
+                <a href="activity.html"><strong>Activités</strong></a>
             </li>
             <li>
-                <a href="languages.html"><strong>Langues</strong></a>
+                <a href="languages.html">Langues</a>
             </li>
             <li>
                 <a href="devis.html">Devis</a>
@@ -48,6 +48,7 @@
         </ul>
     </nav>
 </div>
+
 
 <div class="main">
     <div class="row" style="display: flex; align-items: safe center; justify-content: safe center">
