--- a/activity.html
+++ b/activity.html
@@ -10,18 +10,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
 <div class="header">
     <nav class="navbar">
-        <a href="index.html">
-            <img src="assets/thelogo.png" style="width: 100px" alt="logo">
+        <a href="index.html" style="display: flex; flex-direction: row">
+            <img src="assets/thelogo.png" style="width:50px" alt="logo">
+            <h6 style="padding: 15px 0 0 0">Esther Traduction</h6>
         </a>
         <ul style="padding: 15px 0 0 0">
             <li>
-                <a href="index.html">Acceuil</a>
+                <a href="index.html"><strong>Accueil</strong></a>
             </li>
             <li>
-                <a href="activity.html"><strong>Activités</strong></a>
+                <a href="activity.html">Activités</a>
             </li>
             <li>
                 <a href="languages.html">Langues</a>
@@ -35,7 +35,7 @@
 
 <div class="main container">
     <div style="text-align: center">
-        <h4><strong>Activité de l'entreprise !</strong></h4>
+        <h4><strong>Activités de l'entreprise !</strong></h4>
     </div>
 
     <!--    if the size is xs show one item else show 2 items-->
@@ -62,11 +62,10 @@
         </div>
         <div class="card col-xs-12 col-sm-6">
             <div class="card-body" style="width: 100%">
-                La première personne traduit la seconde corrige
+                La première personne traduit, la seconde corrige
             </div>
         </div>
-        <div class="card col-xs-12">
-            <img src="./assets/activity.jpg" alt="activity">
+
         </div>
     </div>
 </div>
@@ -77,8 +76,8 @@
         <p><strong>Contact</strong></p>
         <p>Raison sociale: Esther traduction</p>
         <p>Status juridique: SARL</p>
-        <p>Siège sociale: 21 rue Desnos 76600 Le Havre</p>
-        <p>Effectif: 50 salariés + 35 travailleurs indépendant</p>
+        <p>Siège social: 21 rue Desnos 76600 Le Havre</p>
+        <p>Effectif: 50 salariés + 35 travailleurs indépendants</p>
     </div>
     <div class="social">
         <div class="social-text">Rejoingnez nous !</div>
