--- a/devis.html
+++ b/devis.html
@@ -13,12 +13,13 @@
 <body>
 <div class="header">
     <nav class="navbar">
-        <a href="index.html">
-            <img src="assets/thelogo.png" style="width: 100px" alt="logo">
+        <a href="index.html" style="display: flex; flex-direction: row">
+            <img src="assets/thelogo.png" style="width:50px" alt="logo">
+            <h6 style="padding: 15px 0 0 0">Esther Traduction</h6>
         </a>
         <ul style="padding: 15px 0 0 0">
             <li>
-                <a href="index.html">Acceuil</a>
+                <a href="index.html"><strong>Accueil</strong></a>
             </li>
             <li>
                 <a href="activity.html">Activités</a>
@@ -27,7 +28,7 @@
                 <a href="languages.html">Langues</a>
             </li>
             <li>
-                <a href="devis.html"><strong>Devis</strong></a>
+                <a href="devis.html">Devis</a>
             </li>
         </ul>
     </nav>
@@ -41,36 +42,36 @@
                 <strong>Demande de devis</strong>
             </div>
             <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text-area" class="form-control" name="name" id="name" placeholder="name" required>
+                <label for="Name">Nom</label>
+                <input type="text-area" class="form-control" name="Name" id="Name" placeholder="Name" required>
             </div>
             <div class="form-group">
-                <label for="adressepostale">Adresse postale</label>
-                <input type="text" class="form-control" name="adressepostale" id="adressepostale"
-                       placeholder="adresse postale" required>
+                <label for="Address">Adresse postale</label>
+                <input type="text" class="form-control" name="Address" id="Address"
+                       placeholder="Address" required>
             </div>
             <div class="form-group">
                 <label for="email">Email</label>
                 <input type="text" class="form-control" name="email" id="email" placeholder="email" required>
             </div>
             <div class="form-group">
-                <label for="_subject">Subject</label>
+                <label for="_subject">Sujet</label>
                 <input type="text" class="form-control" name="_subject" id="_subject" placeholder="subject" required>
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
+                <label for="exampleInputPassword1">Mot de passe</label>
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
             <!--        add a text area input with boostrap-->
             <div class="form-group">
                 <label for="message">Message</label>
-                <textarea class="form-control" name="message" id="message" rows="5" placeholder="Votre demande"
+                <textarea class="form-control" name="message" id="message" rows="5" placeholder="Your request"
                           required></textarea>
             </div>
             <!--         the white button should be at the center-->
             <button type="submit" class="btn btn-primary"
                     style="background-color: white; color: #b076b3; border: solid 1px #b076b3; display: block; margin-top: 5px">
-                Submit
+                Envoyer
             </button>
         </form>
     </div>
@@ -79,12 +80,12 @@
     <div class="policy">
         <p><strong>Contact</strong></p>
         <p>Raison sociale: Esther traduction</p>
-        <p>Status juridique: SARL</p>
-        <p>Siège sociale: 21 rue Desnos 76600 Le Havre</p>
-        <p>Effectif: 50 salariés + 35 travailleurs indépendant</p>
+        <p>Statut juridique: SARL</p>
+        <p>Siège social: 21 rue Desnos 76600 Le Havre</p>
+        <p>Effectif: 50 salariés + 35 travailleurs indépendants</p>
     </div>
     <div class="social">
-        <div class="social-text">Rejoingnez nous !</div>
+        <div class="social-text">Rejoignez nous !</div>
         <div>
             <img src="./assets/facebook.svg" alt="">
             <img src="./assets/instagram.svg" alt="">
