--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <body>
 <div class="header">
     <nav class="navbar">
-        <a href="index.html">
-            <img src="assets/thelogo.png" style="width: 100px" alt="logo">
+        <a href="index.html" style="display: flex; flex-direction: row">
+            <img src="assets/thelogo.png" style="width:50px" alt="logo">
+            <h6 style="padding: 15px 0 0 0">Esther Traduction</h6>
         </a>
         <ul style="padding: 15px 0 0 0">
             <li>
-                <a href="index.html"><strong>Acceuil</strong></a>
+                <a href="index.html"><strong>Accueil</strong></a>
             </li>
             <li>
                 <a href="activity.html">Activités</a>
@@ -36,27 +37,24 @@
 <div class="main">
     <div class="row" style="display: flex; align-items: safe center; justify-content: safe center">
         <div class="card col-xs-12 col-md-4 border-0">
-            Madma Esther Sannier a
-            tonde sa societe de traduction en Z009.
-            Attentive a la demande au marche, rentreprise sest orientée sur le marché des PME avant des partenaires
-            étrangers, et s'est peu a peu specialisee dans e domaine commercial et technique :
-            plaquettes d'entreprises, modes demploi. rapport.
-            articles de blog. descriptif techniques, aevis, courriers,
+            Madame Esther Sannier a
+            fondé sa société de traduction en 2009.
+            Attentive à la demande du marché, l'entreprise s'est orientée sur le marché des PME ayant des partenaires
+            étrangers, et s'est peu à peu specialisee dans le domaine commercial et technique :
+            plaquettes d'entreprises, modes d'emploi, rapport,
+            articles de blog, descriptif techniques, devis, courriers,
             ect...
         </div>
         <div class="card col-xs-12 col-md-4 border-0" style="align-items: center">
             <img src="./assets/main.jpg" alt="main image" style="width: 75%">
         </div>
         <div class="card col-xs-12 col-md-4 border-0">
-            Soucieuse d'ottrir a ses clients
-            Benvenuti
-            un travail de gualite irreprochable elle nembauche gue des traducteurs dont la
-            lanque maternelle est celle de la lanque souhaitée : anglais,
-            E Komo espagnol, italien, portugais,
-            Mai
-            allemand néerlandais japonais, mandarin, ect..
-            Chaque travai est soumis a des traducteurs ditterents: E premier traduit. le second
-            Bienvenue exécute les corrections
+            Soucieuse d'offrir à ses clients
+            un travail de qualité irréprochable elle n'embauche que des traducteurs dont la
+            langue maternelle est celle de la lanque souhaitée : anglais,
+            espagnol, italien, portugais, allemand, néerlandais, japonais, mandarin, ect..
+            Chaque travail est soumis à des traducteurs différents: le premier traduit, le second
+            exécute les corrections.
         </div>
     </div>
 
@@ -66,12 +64,12 @@
     <div class="policy">
         <p><strong>Contact</strong></p>
         <p>Raison sociale: Esther traduction</p>
-        <p>Status juridique: SARL</p>
-        <p>Siège sociale: 21 rue Desnos 76600 Le Havre</p>
-        <p>Effectif: 50 salariés + 35 travailleurs indépendant</p>
+        <p>Statut juridique: SARL</p>
+        <p>Siège social: 21 rue Desnos 76600 Le Havre</p>
+        <p>Effectif: 50 salariés + 35 travailleurs indépendants</p>
     </div>
     <div class="social">
-        <div class="social-text">Rejoingnez nous !</div>
+        <div class="social-text">Rejoignez-nous !</div>
         <div>
             <img src="./assets/facebook.svg" alt="">
             <img src="./assets/instagram.svg" alt="">
