--- a/languages.html
+++ b/languages.html
@@ -11,20 +11,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <div class="header">
     <nav class="navbar">
-        <a href="index.html">
-            <img src="assets/thelogo.png" style="width: 100px" alt="logo">
+        <a href="index.html" style="display: flex; flex-direction: row">
+            <img src="assets/thelogo.png" style="width:50px" alt="logo">
+            <h6 style="padding: 15px 0 0 0">Esther Traduction</h6>
         </a>
         <ul style="padding: 15px 0 0 0">
             <li>
-                <a href="index.html">Acceuil</a>
+                <a href="index.html"><strong>Accueil</strong></a>
             </li>
             <li>
                 <a href="activity.html">Activités</a>
             </li>
             <li>
-                <a href="languages.html"><strong>Langues</strong></a>
+                <a href="languages.html">Langues</a>
             </li>
             <li>
                 <a href="devis.html">Devis</a>
@@ -32,7 +34,6 @@
         </ul>
     </nav>
 </div>
-
 
 <div class="main">
     <div class="row" style="display: flex; align-items: safe center; justify-content: safe center">
@@ -102,11 +103,11 @@
         <p><strong>Contact</strong></p>
         <p>Raison sociale: Esther traduction</p>
         <p>Status juridique: SARL</p>
-        <p>Siège sociale: 21 rue Desnos 76600 Le Havre</p>
-        <p>Effectif: 50 salariés + 35 travailleurs indépendant</p>
+        <p>Siège social: 21 rue Desnos 76600 Le Havre</p>
+        <p>Effectif: 50 salariés + 35 travailleurs indépendants</p>
     </div>
     <div class="social">
-        <div class="social-text">Rejoingnez nous !</div>
+        <div class="social-text">Rejoignez-nous !</div>
         <div>
             <img src="./assets/facebook.svg" alt="">
             <img src="./assets/instagram.svg" alt="">
