--- a/languages.html
+++ b/languages.html
@@ -16,7 +16,10 @@
     <nav class="navbar">
         <a href="index.html" style="display: flex; flex-direction: row">
             <img src="assets/thelogo.png" style="width:50px" alt="logo">
-            <h7 style="padding: 15px 0 0 0">Esther Traduction</h7>
+            <div style="display:flex; flex-direction: column;">
+                <h7>Esther</h7>
+                <h7>Traduction</h7>
+            </div>
         </a>
         <ul style="padding: 15px 0 0 0">
             <li>
